# bigint

./: LICENSE
src/: CMakeLists.txt
src/bigint/: CMakeLists.txt
src/bigint/fuzzing/: CMakeLists.txt  tu_fuzzer_add.py  tu_fuzzer_cmp.py  tu_fuzzer_cmp_inplace.py  tu_fuzzer_mod.py  tu_fuzzer_mul.py  tu_fuzzer_sub.py  tu_fuzzer_sub_inplace.py
src/bigint/private/: bigint.c  bigint_private.h
src/bigint/public/: bigint.h
src/bigint/tests/: CMakeLists.txt  main_add.c  main_cmp.c  main_cmp_inplace.c  main_mod.c  main_mul.c  main_private.c  main_sub.c
src/main/: CMakeLists.txt  main.c
src/unity/: CMakeLists.txt
